--- a/index.html
+++ b/index.html
@@ -1,63 +1,96 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>For Aliya</title>
-    <link rel="manifest" href="manifest.json" />
-    <meta name="theme-color" content="#FDFBF7" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-    <meta name="apple-mobile-web-app-title" content="Aliya" />
-    <link rel="apple-touch-icon" href="https://res.cloudinary.com/dnpjnknro/image/upload/v1765741271/intro_zmc0ue.jpg" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Placemein | The Hiring Engine</title>
     <script src="https://cdn.tailwindcss.com"></script>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;1,400;1,500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <script>
       tailwind.config = {
         theme: {
           extend: {
-            colors: {
-              paper: '#FDFBF7',
-              ink: '#2D2D2D',
-              mist: '#8C8C8C',
-              night: '#121212',
-              star: '#E5E5E5',
-            },
             fontFamily: {
-              serif: ['"Cormorant Garamond"', 'serif'],
+              sans: ['Inter', 'sans-serif'],
+              // Mapping serif to Inter as well to enforce the new design language without breaking existing class references
+              serif: ['Inter', 'sans-serif'], 
             },
+            colors: {
+              primary: {
+                DEFAULT: '#4B0082', // Deep Purple
+                dark: '#2e0052',
+                light: '#F3E8FF',
+              },
+              accent: {
+                DEFAULT: '#FFC107', // Amber Gold
+                light: '#FFD54F',
+              },
+              slate: {
+                50: '#F9FAFB', 
+                900: '#111827',
+              }
+            },
+            animation: {
+              'fade-in': 'fadeIn 0.5s ease-out',
+              'slide-up': 'slideUp 0.6s cubic-bezier(0.16, 1, 0.3, 1)',
+              'float': 'float 6s ease-in-out infinite',
+            },
+            keyframes: {
+              fadeIn: {
+                '0%': { opacity: '0' },
+                '100%': { opacity: '1' },
+              },
+              slideUp: {
+                '0%': { transform: 'translateY(20px)', opacity: '0' },
+                '100%': { transform: 'translateY(0)', opacity: '1' },
+              },
+              float: {
+                '0%, 100%': { transform: 'translateY(0)' },
+                '50%': { transform: 'translateY(-20px)' },
+              }
+            }
           }
         }
       }
     </script>
-    <script>
-      if ('serviceWorker' in navigator) {
-        window.addEventListener('load', () => {
-          navigator.serviceWorker.register('sw.js').then(reg => {
-            console.log('SW registered:', reg);
-          }).catch(err => {
-            console.log('SW registration failed:', err);
-          });
-        });
+    <style>
+      html { scroll-behavior: smooth; }
+      body {
+        background-color: #F9FAFB;
+        color: #111827;
+        font-family: 'Inter', sans-serif;
       }
-    </script>
-<script type="importmap">
+      .glass-panel {
+        background: rgba(255, 255, 255, 0.9);
+        backdrop-filter: blur(20px);
+        border: 1px solid rgba(0, 0, 0, 0.08);
+      }
+      .active-card {
+        border-color: #4B0082 !important;
+        border-width: 1px !important;
+        background-color: #FFFFFF !important;
+        box-shadow: 0 20px 40px -10px rgba(75, 0, 130, 0.1);
+        transform: scale(1.005);
+      }
+    </style>
+  <script type="importmap">
 {
   "imports": {
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.38.0",
+    "vite": "https://esm.sh/vite@^7.3.1",
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
-    "vite": "https://esm.sh/vite@^7.3.1"
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "react": "https://esm.sh/react@^19.2.3"
   }
 }
 </script>
 <link rel="stylesheet" href="/index.css">
 </head>
-  <body>
+  <body class="selection:bg-primary/20 selection:text-primary-dark">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
